Platform detection testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,12 @@ cmake_minimum_required (VERSION 3.8)
 
 project ("StopRightNow")
 
+if (WIN32)
+    add_definitions(-DPLATFORM_WINDOWS)
+elseif (UNIX)
+    add_definitions(-DPLATFORM_LINUX)
+endif()
+
+
 # Include sub-projects.
 add_subdirectory ("StopRightNow")
